# Nexus

./: .gitignore  LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: FAN_INTERFACE.md  HARDENING_REPORT.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/src/: battery_events.rs  commands.rs  diagnostics.rs  gaming.rs  lib.rs  linux_hub.rs  logging.rs  main.rs  notifications.rs  optimizer.rs  overlay.rs  runtime_smoke.rs  storage.rs  sysdoctor.rs
src-tauri/src/control/: automation.rs  capabilities.rs  detector.rs  hardware_support.rs  integrations.rs  mod.rs  nexus.rs  plugins.rs  registry.rs  safe_writer.rs  service.rs  traits.rs
src-tauri/src/control/battery/: analytics.rs  engine.rs  mod.rs
src-tauri/src/control/controllers/: generic.rs  mod.rs  omen.rs
src-tauri/src/control/fan/: control.rs  engine.rs  mod.rs  profiles.rs
src-tauri/src/control/games/: library.rs  mangohud.rs  mod.rs  profiles.rs  scanner.rs
src-tauri/src/control/gpu/: engine.rs  mod.rs
src-tauri/src/control/intelligence/: automation.rs  bottlenecks.rs  engine.rs  health.rs  maintenance.rs  mod.rs  nlp.rs  recommendations.rs  trends.rs
src-tauri/src/control/power/: controllers.rs  engine.rs  mod.rs  ppd.rs
src-tauri/src/control/rgb/: color.rs  effects.rs  engine.rs  mod.rs  omen.rs  openrgb.rs  profiles.rs
src-tauri/src/telemetry/: collectors.rs  fps.rs  hardware.rs  hwmon.rs  mod.rs  processes.rs  service.rs  store.rs  sysfs.rs  types.rs
(+148 files in other folders)
