[package]
name = "nexus-control-center"
version = "1.0.0-beta.2"
description = "Nexus Control Center — next-generation Linux desktop control center"
authors = ["Nexus"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Already in the dependency tree via gtk/atk; used directly for POSIX signal
# handling so SIGINT/SIGTERM trigger a clean shutdown (no false crash markers).
libc = "0.2"
tauri-plugin-dialog = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
